# python-packaging

./: .gitattributes  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .tool-versions  DATABASE.md  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: benchmark-packages.yml  build-packages.yml
docs/: deployment-logs.md  deployment-metrics.md
scripts/diagnostics/: check-database.py
scripts/powershell/benchmark/: run-benchmark.ps1
scripts/powershell/exe/: build.ps1  build.spec  deploy.ps1  rollback.ps1
scripts/powershell/msi/: DicomGateway.wxs  build.ps1  deploy.ps1  rollback.ps1
scripts/powershell/zip/: build.ps1  deploy-metrics.ps1  deploy.ps1  rollback.ps1
src/: __init__.py  __main__.py  config.yaml  db.py  mock_service.py  requirements.txt
src/migrations/: migrate.py
